compiler/testData/diagnostics/tests/script/ComplexScript.kts
fun foo(<!UNUSED_PARAMETER!>x<!>: Int) = 1

val y = 2

foo(y)
